# grid_df

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
grid_df/: __init__.py  grid_df.py
tests/: test_grid_df.py
