[tool.poetry]
name = "grid_df"
version = "0.1.0"
description = ""
authors = ["Vince Buffalo <vsbuffalo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^0.20.29"
numpy = "^1.26.4"

[tool.black]
line-length = 88

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ruff = "^0.4.5"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

