[project]
name = "grid_df"
version = "0.1.1"
description = ""
authors = [
    {name = "Vince Buffalo", email = "vsbuffalo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "polars>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

